tests/errors/first_stage/.define/value_nan/value_nan.as
; constant's value is not a whole number
.define myconst = a3